--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5486483a",
    "metadata": {},
    "outputs": [
@@ -42,10 +42,11 @@
     "    raise FileNotFoundError(\"No se encontró 'images/cats.png'\")\n",
     "h, w = img.shape[:2]\n",
     "\n",
+    "# Lienzo 2x\n",
     "CW, CH = w*2, h*2\n",
     "ox, oy = (CW - w)//2, (CH - h)//2\n",
     "canvas0 = np.zeros((CH, CW, 3), np.uint8)\n",
-    "canvas0[oy:oy+h, ox:ox+w] = img\n",
+    "canvas0[oy:oy+h, ox:ox+w] = img # imagen en el centro del lienzo\n",
     "\n",
     "cv.namedWindow(\"Transformaciones\", cv.WINDOW_AUTOSIZE)\n",
     "def nothing(_): pass\n",
@@ -55,22 +56,34 @@
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
     "cv.createTrackbar(\"Cx\", \"Transformaciones\", CW//2, CW, nothing)\n",
     "cv.createTrackbar(\"Cy\", \"Transformaciones\", CH//2, CH, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)  # 1.00 = 100\n",
     "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 300, nothing)\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
     "print(\"Controles:\")\n",
-    "print(\"  • Clic izquierdo y arrastrar: trasladar imagen.\")\n",
-    "print(\"  • Clic derecho: fijar centro de rotación/escalado en el punto clicado.\")\n",
-    "print(\"  • Sliders: Tx/Ty/Cx/Cy/Ángulo/Escala. ESC para salir.\")\n",
+    "print(\"- Clic izquierdo y arrastrar: trasladar imagen.\")\n",
+    "print(\"- Clic derecho: fijar centro de rotación/escalado en el punto clicado.\")\n",
+    "print(\"- ESC para salir.\")\n",
     "\n",
-    "t_state = np.array([0.0, 0.0], dtype=np.float32)\n",
-    "prev_c = np.array([\n",
+    "# Transformación afín:\n",
+    "#     T(x) = A·(x - c) + c + t\n",
+    "# donde:\n",
+    "#     A -> rotación y escala combinadas\n",
+    "#     c -> centro de rotación/escalado\n",
+    "#     t -> traslación global\n",
+    "#\n",
+    "# OpenCV aplica:  x' = A·x + b\n",
+    "# donde:\n",
+    "#     b = t + (I - A)·c\n",
+    "\n",
+    "t_state = np.array([0.0, 0.0], dtype=np.float32) # vector de traslación global (t_x, t_y) que desplaza toda la imagen\n",
+    "prev_c = np.array([                              # centro anterior de rotación/escalado (c_x, c_y), usado para compensar movimiento\n",
     "    cv.getTrackbarPos(\"Cx\", \"Transformaciones\"),\n",
     "    cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
     "], dtype=np.float32)\n",
     "current_c = prev_c.copy()\n",
     "\n",
+    "# Variables globales para el callback del mouse\n",
     "A_cur = np.eye(2, dtype=np.float32)\n",
     "I_cur = np.eye(2, dtype=np.float32)\n",
     "M_cur = np.hstack([A_cur, np.zeros((2,1), np.float32)])\n",
@@ -79,7 +92,7 @@
     "drag_start_canvas = np.array([0.0, 0.0], dtype=np.float32)\n",
     "drag_base_t = np.array([0.0, 0.0], dtype=np.float32)\n",
     "\n",
-    "def on_mouse(event, x, y, flags, param):\n",
+    "def mouse(event, x, y, flags, param):\n",
     "    global dragging, drag_start_canvas, drag_base_t\n",
     "    global t_state, prev_c, current_c, A_cur, I_cur, M_cur\n",
     "\n",
@@ -91,9 +104,10 @@
     "        drag_base_t = t_state.copy()\n",
     "\n",
     "    elif event == cv.EVENT_MOUSEMOVE and dragging:\n",
-    "        delta = np.array([gx, gy], dtype=np.float32) - drag_start_canvas\n",
+    "        delta = np.array([gx, gy], dtype=np.float32) - drag_start_canvas # desplazamiento desde el inicio del arrastre\n",
     "        t_state = drag_base_t + delta\n",
     "\n",
+    "        # Reflejar cambios en los trackbars\n",
     "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\", int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
     "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\", int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
     "\n",
@@ -101,11 +115,12 @@
     "        dragging = False\n",
     "\n",
     "    elif event == cv.EVENT_RBUTTONDOWN:\n",
+    "        # Compensar cambio de pivote manteniendo b\n",
     "        M_inv = cv.invertAffineTransform(M_cur)\n",
-    "        cx_src = M_inv[0,0]*gx + M_inv[0,1]*gy + M_inv[0,2]\n",
-    "        cy_src = M_inv[1,0]*gx + M_inv[1,1]*gy + M_inv[1,2]\n",
+    "        cx_src = M_inv[0,0]*gx + M_inv[0,1]*gy + M_inv[0,2] # puntos en la imagen original\n",
+    "        cy_src = M_inv[1,0]*gx + M_inv[1,1]*gy + M_inv[1,2] # puntos en la imagen original\n",
     "        c_new = np.array([cx_src, cy_src], dtype=np.float32)\n",
-    "\n",
+    "        \n",
     "        b_keep = t_state + (I_cur - A_cur) @ prev_c\n",
     "        t_state = b_keep - (I_cur - A_cur) @ c_new\n",
     "\n",
@@ -117,7 +132,7 @@
     "        prev_c = c_new.copy()\n",
     "        current_c = c_new.copy()\n",
     "\n",
-    "cv.setMouseCallback(\"Transformaciones\", on_mouse)\n",
+    "cv.setMouseCallback(\"Transformaciones\", mouse)\n",
     "\n",
     "while True:\n",
     "    tx_ui = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - CW//2\n",
@@ -130,6 +145,7 @@
     "    if cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\") == 1:\n",
     "        sy = sx\n",
     "\n",
+    "    # Rotación y escalado\n",
     "    rad = np.deg2rad(ang)\n",
     "    co, si = np.cos(rad), np.sin(rad)\n",
     "    R = np.array([[ co, -si],\n",
@@ -140,11 +156,13 @@
     "    I = np.eye(2, dtype=np.float32)\n",
     "\n",
     "    if not dragging:\n",
+    "        # Sincronizar t_state con trackbars SOLO si el usuario cambió Tx/Ty\n",
     "        shown_tx = int(np.clip(round(t_state[0]) + CW//2, 0, CW))\n",
     "        shown_ty = int(np.clip(round(t_state[1]) + CH//2, 0, CH))\n",
     "        if (tx_ui + CW//2) != shown_tx or (ty_ui + CH//2) != shown_ty:\n",
     "            t_state = np.array([tx_ui, ty_ui], dtype=np.float32)\n",
     "\n",
+    "    # Compensar cambio de pivote manteniendo b\n",
     "    c_now = np.array([cx, cy], dtype=np.float32)\n",
     "    if not dragging and not np.allclose(c_now, prev_c):\n",
     "        b_keep = t_state + (I - A) @ prev_c\n",
@@ -157,13 +175,13 @@
     "    A_cur = A\n",
     "    I_cur = I\n",
     "\n",
-    "    b = (t_state + (I - A) @ c_now).astype(np.float32)\n",
+    "    b = (t_state + (I - A) @ c_now).astype(np.float32) # traslación final\n",
     "    M = np.hstack([A, b.reshape(2,1)])\n",
     "    M_cur = M\n",
     "\n",
     "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    pc = (A @ c_now + b).astype(int)\n",
+    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A c + b\n",
     "    disp = out.copy()\n",
     "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
     "    cv.putText(disp, f\"C=({int(cx)},{int(cy)})\", (int(pc[0])+10, int(pc[1])-10),\n",
