--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5c44bdc8",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
     "#     b = t + (I - A)·c\n",
     "\n",
     "\n",
-    "t_state = np.array([0.0, 0.0], dtype=np.float32)   # t_state: vector de traslación global (t_x, t_y) que desplaza toda la imagen\n",
+    "t_state = np.array([0.0, 0.0], dtype=np.float32)   # vector de traslación global (t_x, t_y) que desplaza toda la imagen\n",
     "prev_c  = np.array([                               # centro anterior de rotación/escalado (c_x, c_y), usado para compensar movimiento\n",
     "    cv.getTrackbarPos(\"Cx\", \"Transformaciones\"),\n",
     "    cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
