--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ab5b0984",
    "metadata": {},
    "outputs": [
@@ -237,6 +237,7 @@
     "\n",
     "h, w = frame.shape[:2]\n",
     "\n",
+    "# Lienzo 2x\n",
     "CW, CH = w*2, h*2\n",
     "ox, oy = (CW - w)//2, (CH - h)//2\n",
     "\n",
@@ -248,14 +249,25 @@
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
     "cv.createTrackbar(\"Cx\", \"Transformaciones\", CW//2, CW, nothing)\n",
     "cv.createTrackbar(\"Cy\", \"Transformaciones\", CH//2, CH, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)  # 1.00 = 100\n",
     "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 300, nothing)\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
     "print(\"El punto (cx/cy) es el centro de rotación y de escalado. ESC para salir.\")\n",
     "\n",
-    "t_state = np.array([0.0, 0.0], dtype=np.float32)\n",
-    "prev_c = np.array([\n",
+    "# Transformación afín:\n",
+    "#     T(x) = A·(x - c) + c + t\n",
+    "# donde:\n",
+    "#     A -> rotación y escala combinadas\n",
+    "#     c -> centro de rotación/escalado\n",
+    "#     t -> traslación global\n",
+    "#\n",
+    "# OpenCV aplica:  x' = A·x + b\n",
+    "# donde:\n",
+    "#     b = t + (I - A)·c\n",
+    "\n",
+    "t_state = np.array([0.0, 0.0], dtype=np.float32) # vector de traslación global (t_x, t_y) que desplaza toda la imagen\n",
+    "prev_c = np.array([                              # centro anterior de rotación/escalado (c_x, c_y), usado para compensar movimiento\n",
     "    cv.getTrackbarPos(\"Cx\", \"Transformaciones\"),\n",
     "    cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
     "], dtype=np.float32)\n",
@@ -266,7 +278,7 @@
     "        break\n",
     "\n",
     "    canvas0 = np.zeros((CH, CW, 3), np.uint8)\n",
-    "    canvas0[oy:oy+h, ox:ox+w] = frame\n",
+    "    canvas0[oy:oy+h, ox:ox+w] = frame  # imagen en el centro del lienzo\n",
     "\n",
     "    tx_ui = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - CW//2\n",
     "    ty_ui = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - CH//2\n",
@@ -278,6 +290,7 @@
     "    if cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\") == 1:\n",
     "        sy = sx\n",
     "\n",
+    "    # Rotación y escalado\n",
     "    rad = np.deg2rad(ang)\n",
     "    c, s = np.cos(rad), np.sin(rad)\n",
     "    R = np.array([[ c, -s],\n",
@@ -287,26 +300,28 @@
     "    A = (R @ S).astype(np.float32)\n",
     "    I = np.eye(2, dtype=np.float32)\n",
     "\n",
+    "    # Sincronizar t_state con trackbars SOLO si el usuario cambió Tx/Ty\n",
     "    shown_tx = int(np.clip(round(t_state[0]) + CW//2, 0, CW))\n",
     "    shown_ty = int(np.clip(round(t_state[1]) + CH//2, 0, CH))\n",
     "    if (tx_ui + CW//2) != shown_tx or (ty_ui + CH//2) != shown_ty:\n",
     "        t_state = np.array([tx_ui, ty_ui], dtype=np.float32)\n",
     "\n",
-    "    c_now = np.array([cx, cy], dtype=np.float32)\n",
+    "    # Compensar cambio de pivote manteniendo b\n",
+    "    c_now = np.array([cx, cy], dtype=np.float32) # nuevo centro de rotación/escalado\n",
     "    if not np.allclose(c_now, prev_c):\n",
-    "        b_keep = t_state + (I - A) @ prev_c\n",
-    "        t_state = b_keep - (I - A) @ c_now\n",
+    "        b_keep = t_state + (I - A) @ prev_c # valor supuesto con centro anterior\n",
+    "        t_state = b_keep - (I - A) @ c_now # valor con nuevo centro\n",
     "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\",\n",
     "                          int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
     "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\",\n",
     "                          int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
     "        prev_c = c_now\n",
     "\n",
-    "    b = (t_state + (I - A) @ c_now).astype(np.float32)\n",
-    "    M = np.hstack([A, b.reshape(2,1)])\n",
+    "    b = (t_state + (I - A) @ c_now).astype(np.float32) # traslación final\n",
+    "    M = np.hstack([A, b.reshape(2,1)])  # 2x3\n",
     "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    pc = (A @ c_now + b).astype(int)\n",
+    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A c + b\n",
     "    disp = out.copy()\n",
     "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
     "    cv.putText(disp, f\"C=({cx},{cy})\", (int(pc[0])+10, int(pc[1])-10),\n",
