--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5c44bdc8",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     "\n",
     "    # Compensar cambio de pivote manteniendo b\n",
     "    c_now = np.array([cx, cy], dtype=np.float32) # nuevo centro de rotación/escalado\n",
-    "    if not np.allclose(c_now, prev_c):\n",
+    "    if not np.allclose(c_now, prev_c): # ¿son diferentes? (permite pequeñas diferencias)\n",
     "        b_keep = t_state + (I - A) @ prev_c # valor supuesto con centro anterior\n",
     "        t_state = b_keep - (I - A) @ c_now # valor con nuevo centro\n",
     "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\",\n",
@@ -120,7 +120,7 @@
     "    M = np.hstack([A, b.reshape(2,1)])  # 2x3\n",
     "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A c + b\n",
+    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A·c + b\n",
     "    disp = out.copy()\n",
     "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
     "    cv.putText(disp, f\"C=({cx},{cy})\", (int(pc[0])+10, int(pc[1])-10),\n",
