--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5486483a",
    "metadata": {},
    "outputs": [
@@ -27,9 +27,9 @@
      "output_type": "stream",
      "text": [
       "Controles:\n",
-      "  • Clic izquierdo y arrastrar: trasladar imagen.\n",
-      "  • Clic derecho: fijar centro de rotación/escalado en el punto clicado.\n",
-      "  • Sliders: Tx/Ty/Cx/Cy/Ángulo/Escala. ESC para salir.\n"
+      "- Clic izquierdo y arrastrar: trasladar imagen.\n",
+      "- Clic derecho: fijar centro de rotación/escalado en el punto clicado.\n",
+      "- ESC para salir.\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
     "\n",
     "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A c + b\n",
+    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A·c + b\n",
     "    disp = out.copy()\n",
     "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
     "    cv.putText(disp, f\"C=({int(cx)},{int(cy)})\", (int(pc[0])+10, int(pc[1])-10),\n",
@@ -321,7 +321,7 @@
     "    M = np.hstack([A, b.reshape(2,1)])  # 2x3\n",
     "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A c + b\n",
+    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A·c + b\n",
     "    disp = out.copy()\n",
     "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
     "    cv.putText(disp, f\"C=({cx},{cy})\", (int(pc[0])+10, int(pc[1])-10),\n",
